maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:24: error: not found: value keepHandOnSideWall
	keepHandOnSideWall()
        ^